# lymixture

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data_preparation/: Data_preparation.ipynb
docs/source/: conf.py  em.ipynb  em.rst  index.rst  models.rst  quickstart.ipynb  utils.rst
evaluation/: Full_ipsi_analysis.ipynb  Full_ipsi_analysis_extended.ipynb  ICCR_reproduction.ipynb  ipsi_all_subsites.ipynb  likelihoods_3_comp_t_stage_new.txt  likelihoods_4_comp_split_t_stage_add_larynx.txt  likelihoods_4_comp_t_stage_new.txt  params_I_to_IV_ipsi_2_comp_split_t_stage_combined_ICCR.pkl  params_I_to_IV_ipsi_2_comp_split_t_stage_combined_ICCR_new.pkl  params_I_to_V_ipsi_3_comp.pkl  params_I_to_V_ipsi_3_comp_split_t_stages.pkl  params_I_to_V_ipsi_3_comp_split_t_stages_new.pkl  params_I_to_V_ipsi_3_comp_split_t_stages_start2.pkl  params_I_to_V_ipsi_4_comp.pkl  params_I_to_V_ipsi_4_comp_split_t_stages.pkl  params_I_to_V_ipsi_4_comp_split_t_stages_add_larynx.pkl  params_I_to_V_ipsi_4_comp_split_t_stages_new.pkl  params_history_4_comp_split_t_stage_add_larynx.json
lymixture/: __init__.py  em.py  model_functions.py  models.py  types.py  utils.py
tests/: em.ipynb  fixtures.py  generate.py  integration.ipynb  test_docstrings.py  test_mixture_model.py
tests/data/: generate.py  mixture.csv
